[gd_scene load_steps=6 format=3 uid="uid://dv2bl2xbwn1pe"]

[ext_resource type="Script" path="res://scripts/transient_platform.gd" id="1_chnpl"]
[ext_resource type="Texture2D" uid="uid://4q18u2y54xjg" path="res://assets/sprites/TransientPlatformBottom.png" id="2_c1m47"]
[ext_resource type="Texture2D" uid="uid://dm7eic06hfdas" path="res://assets/sprites/RustTrussTop.png" id="3_rjg4p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1eidc"]
size = Vector2(32, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_we03o"]
size = Vector2(10, 0.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_chnpl")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture = ExtResource("2_c1m47")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(0, -14)
collision_mask = 2
gravity_scale = 0.0
sleeping = true
freeze = true
contact_monitor = true
max_contacts_reported = 5
linear_velocity = Vector2(1, 1)

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(0, 14)
texture = ExtResource("3_rjg4p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("RectangleShape2D_1eidc")
one_way_collision = true

[node name="Area2DLeft" type="Area2D" parent="RigidBody2D"]
position = Vector2(0, 14)
collision_mask = 2

[node name="CollisionShape2DL" type="CollisionShape2D" parent="RigidBody2D/Area2DLeft"]
position = Vector2(-11, -16)
shape = SubResource("RectangleShape2D_we03o")

[node name="Area2D2Middle" type="Area2D" parent="RigidBody2D"]
position = Vector2(0, 14)
collision_mask = 2

[node name="CollisionShape2DM" type="CollisionShape2D" parent="RigidBody2D/Area2D2Middle"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_we03o")

[node name="Area2DRight" type="Area2D" parent="RigidBody2D"]
position = Vector2(0, 14)
collision_mask = 2

[node name="CollisionShape2DR" type="CollisionShape2D" parent="RigidBody2D/Area2DRight"]
position = Vector2(11, -16)
shape = SubResource("RectangleShape2D_we03o")

[node name="SQUEEEEK" type="Timer" parent="."]
wait_time = 0.253

[connection signal="body_entered" from="RigidBody2D" to="RigidBody2D" method="_on_body_entered"]
[connection signal="area_entered" from="RigidBody2D/Area2DLeft" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2DLeft" to="." method="_on_area_2d_left_body_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2DLeft" to="." method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="RigidBody2D/Area2D2Middle" to="." method="_on_area_2d_2_area_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2D2Middle" to="." method="_on_area_2d_2_middle_body_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2D2Middle" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2DRight" to="." method="_on_area_2d_right_body_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2DRight" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="SQUEEEEK" to="." method="_on_squeeeek_timeout"]
